[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["Muhannad <Muhannadalmughrabi233@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.3"
pandas = "^1.2.4"
sklearn = "^0.0"
jupyterlab = "^3.0.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
